--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/AccountPropositionsPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/AccountPropositionsPartial.cshtml
@@ -28,7 +28,7 @@ else
         </div>
         <div class="col-1">Save/Remove</div>
     </div>
-    <div class="row border border-dark rounded p-3 mb-5 bg-light-blue">
+    <div class="row p-3 mb-5 bg-prop-base">
         <div class="col-12">
             @foreach (var proposition in Model.AccountPropositions
            .OrderBy(p => p.EventDateTime)
