--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SimpleSinglePropositionPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SimpleSinglePropositionPartial.cshtml
@@ -1,24 +1,25 @@
 ﻿@model bad_each_way_finder_domain.DomainModel.Proposition
 
 @{
-    var backgroundEachWayEv = Model.EachWayExpectedValue > 0 ? "bg-success" : "bg-dark-orange";
+    var backgroundEachWayEv = Model.EachWayExpectedValue > 0 ? "bg-success" : "bg-prop-med";
+    var borderSuccess = Model.EachWayExpectedValue > 0 ? "border-thick-lime" : "border border-dark";
 }
-<div class="row w-50 @backgroundEachWayEv text-light m-1 p-1 border border-dark rounded">
+<div class="row w-50 @backgroundEachWayEv @borderSuccess text-prop-name m-1 p-1 rounded">
     <div class="col-4 font-md">
         @Model.RunnerName
     </div>
     <div class="col-5">
-        <span class="text-cyan font-md">@Model.WinRunnerOddsNumerator/@Model.WinRunnerOddsDenominator</span>
+        <span class="text-lime font-md">@Model.WinRunnerOddsNumerator/@Model.WinRunnerOddsDenominator</span>
         &nbsp;
         [<span class="text-pink"> @Model.ExchangeWinPrice.ToString("0.00") : </span>
         <span class="text-pink">@Model.ExchangePlacePrice.ToString("0.00") </span>]
         &nbsp;
-        <span class="text-cyan">@Model.EachWayPlacePart.ToString("0.00")</span>
+        <span class="text-lime">@Model.EachWayPlacePart.ToString("0.00")</span>
     </div>
 
     <div class="col-1">
         @{
-            var textEachWayEv = Model.EachWayExpectedValue > 0 ? "text-light" : "text-dark";
+            var textEachWayEv = Model.EachWayExpectedValue > 0 ? "text-light" : "text-prop-name";
         }
         <span class="@textEachWayEv">@Model.EachWayExpectedValue.ToString("0.000%")</span>
     </div>
