--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/_Layout.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/_Layout.cshtml
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/bad_each_way_finder.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/mvc-grid.css" />
-    <script src="https://kit.fontawesome.com/177a1325c3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+@*    <link rel="stylesheet" href="~/css/sweet-alert-borderless.css" asp-append-version="true" />
+*@    <script src="https://kit.fontawesome.com/177a1325c3.js" crossorigin="anonymous"></script>
 
 </head>
 <body class="site-bg">
@@ -139,7 +141,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/mvc-grid.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.7/dist/sweetalert2.all.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.3/dist/sweetalert2.all.min.js" ></script>
     <script>
         document.querySelectorAll(".mvc-grid").forEach(element => new MvcGrid(element));
     </script>
