--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/LivePropositionsPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/LivePropositionsPartial.cshtml
@@ -1,10 +1,10 @@
 ﻿@model bad_each_way_finder.Pages.Shared.PropositionsModel
 
-<div class="row border border-dark rounded bg-light-blue p-3 mb-5">
+<div class="row bg-prop-base p-3 mb-5">
     <div class="col-12">
         @foreach (var meeting in Model.LivePropositions.GroupBy(e => e.EventName))
         {
-            <div class="row mb-3 bg-dark-blue text-light p-1 rounded">
+            <div class="row mb-3 bg-prop-base-1 text-light p-1 rounded">
 
                 <div class="col-12 m-1">
                     <span class="font-lg text-warning">@meeting.Key</span>
@@ -13,7 +13,7 @@
                 <div class="col-12">
                     @foreach (var race in meeting.GroupBy(r => r.EventDateTime))
                     {
-                        <div class="me-1 mb-2 bg-secondary text-dark p-2 border border-dark rounded">
+                        <div class="me-1 mb-2 bg-prop-base-2 text-dark p-2 border border-dark rounded">
                             <div style="width: 200px;">
                                 <span class="font-md ms-1 me-1">@race.Key.ToString("HH:mm")</span>
                                 <span class="text-black me-1">@race.First().SportsbookNumberOfPlaces</span>
