--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/PropositionsPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/PropositionsPartial.cshtml
@@ -2,7 +2,7 @@
 
 
 <div id="propositions">
-    <div id="updated-time" class="row mt-2 mb-2 w-25 text-center ms-1">
+    <div id="updated-time" class="row mt-2 mb-2 w-25 text-center ms-1q">
          <span id="last-updated-time" class="text-dark border border-dark rounded-1 p-1 bg-light">Last updated - @DateTime.Now.ToString("HH:mm:ss")</span>
     </div>
 
@@ -63,7 +63,7 @@
     <div class="row bg-prop-headers p-3 rounded border border-dark mb-1 mt-3 text-prop-name">
         <a class="text-prop-name" style="text-decoration: none;" data-bs-toggle="collapse" href="#raised-collapse" role="button" aria-expanded="false" aria-controls="raised-collapse">
             <span class="font-lg">
-                System Raised Propositions for Today's Racing
+                Track a Proposition
                 <span type="button" class="bg-prop-headers border border-0" data-bs-toggle="tooltip" data-bs-placement="top" title="All Raised Propositions for Today's Racing">
                     <i class="fa-solid fa-circle-info"></i>
                 </span>
