--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SelectedRacePartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SelectedRacePartial.cshtml
@@ -13,7 +13,7 @@
     }
 else if (selectedRace != null && selectedRace.EventDateTime != default)
 {
-            <div class="row border border-dark rounded p-3 mb-3 bg-green-bright">
+        <div class="row border border-dark rounded p-3 mb-3 bg-prop-headers text-prop-name">
                 <div class="col-12">
                     <h6 class="font-lg">
                         @selectedRace.EventName @selectedRace.EventDateTime.ToString("HH:mm") @selectedRace.SportsbookNumberOfPlaces
@@ -21,7 +21,7 @@ else if (selectedRace != null && selectedRace.EventDateTime != default)
                     </h6>
                 </div>
             </div>
-            <div class="row border border-dark rounded bg-blue-neutral p-1 mb-1 text-black text-center">
+        <div class="row border border-dark rounded bg-sub-header p-2 mb-1 text-black text-center">
                 <div class="col-3 text-start ps-4">
                     RunnerName
                 </div>
@@ -47,13 +47,13 @@ else if (selectedRace != null && selectedRace.EventDateTime != default)
 
             @foreach (var runner in selectedRace.Runners.OrderBy(r => r.WinRunnerOddsDecimal))
             {
-                <div class="row border border-dark rounded bg-mintcream p-1 mb-1 text-center font-md">
-                    <div class="col-3 text-start font-lg">
+            <div class="row border border-bottom border-dark rounded p-2 font-md bg-dark-blue text-prop-name mb-1 text-center">
+                    <div class="col-3 text-start font-lg ps-4">
                         @runner.RunnerOrder -
                         @runner.RunnerName
 
                     </div>
-                    <div class="col-1">
+                    <div class="col-1 text-lime">
                         @runner.WinRunnerOddsDecimal.ToString("0.00")
                     </div>
                     <div class="col-1">
@@ -90,7 +90,7 @@ else if (selectedRace != null && selectedRace.EventDateTime != default)
     }
 else
 {
-    <div class="row border border-dark rounded bg-light p-3 mb-3">
+    <div class="row border border-dark rounded bg-prop-base-1 p-3 mb-3 text-prop-name">
         <div class="col-12">
             <h6 class="font-md">
                 Please select a race
