--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/_Layout.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/_Layout.cshtml
@@ -36,8 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/History">History</a>
                         </li>
-
-
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-page="/Faq">FAQ</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
