--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Index.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Index.cshtml
@@ -6,20 +6,20 @@
 
 <div id="welcome-page" style="background-color: rgba(0,0,0,0.7)">
     <div class="row p-5">
-        <div class="col-12 pt-5 " style="color: #FF9900;">
-            <h1><span style="font-size: 130px;">Bad Each Way Finder</span></h1>
-            <h3><span style="font-size: 70px;">Find Your Edge.</span></h3>
+        <div class="col-12 pt-5" style="">
+            <h1><span class="welcome-text-color" id="welcome-main-header">Bad Each Way Finder</span></h1>
+            <h3><span class="welcome-text-color" id="welcome-sub-header">Find Your Edge.</span></h3>
         </div>
     </div>
     <div class="row mt-5 mb-5">
         <div class="col-4 offset-7 text-end">
-            <a class="btn btn-xl btn-primary m-2" href="/Identity/Account/Login">Login</a>
-            <a class="btn btn-xl btn-primary m-2" href="/Identity/Account/Register">Register</a>
+            <a class="btn btn-lg btn-primary m-2" href="/Identity/Account/Login">Login</a>
+            <a class="btn btn-lg btn-primary m-2" href="/Identity/Account/Register">Register</a>
             <p class="text-end text-light">Please Gamble Responsibly. 18+</p>
             </div>
     </div>
         <div class="row p-5 border border-dark rounded-3" style="background-color: rgba(0,0,0,0.9)">
-        <div class="col-7" style="color: #FF9900;">
+        <div class="col-12 col-7-md welcome-text-color">
             <div style="font-size: 26px;">
                 <p><i class="fa-regular fa-square-check" style="color: forestgreen"></i> Discover Bad Each Way Bets in Real Time</p>
                 <p><i class="fa-regular fa-square-check" style="color: forestgreen"></i> Uses BetFair Exchange to Identify Positive EV Bets</p>
