--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/PropositionsPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/PropositionsPartial.cshtml
@@ -2,11 +2,11 @@
 
 
 <div id="propositions">
-    <div id="updated-time" class="row mt-2 mb-2 w-25 text-center ms-1q">
+    <div id="updated-time" class="row m-1 text-center">
          <span id="last-updated-time" class="text-dark border border-dark rounded-1 p-1 bg-light">Last updated - @DateTime.Now.ToString("HH:mm:ss")</span>
     </div>
 
-    <div class="row bg-prop-headers p-3 rounded border border-dark mb-1 mt-3 text-prop-name">
+    <div class="row bg-prop-headers p-3 rounded border border-dark mt-3 text-prop-name">
         <span class="font-lg">
             Live Propositions
             <span type="button" class="bg-prop-headers border border-0 text-light" data-bs-toggle="tooltip" data-bs-placement="top" title="Propositions as they happen">
@@ -32,7 +32,7 @@
         }
     </div>
 
-    <div class="row bg-prop-headers p-3 rounded border border-dark mb-1 mt-3 text-prop-name">
+    <div class="row bg-prop-headers p-3 rounded border border-dark mt-1 text-prop-name">
         <a class="text-prop-name" style="text-decoration: none;" data-bs-toggle="collapse" href="#account-collapse" role="button" aria-expanded="false" aria-controls="account-collapse">
             <span class="font-lg">
                 Your Tracked Propositions for Today's Racing
@@ -60,7 +60,7 @@
         </div>
     </div>
 
-    <div class="row bg-prop-headers p-3 rounded border border-dark mb-1 mt-3 text-prop-name">
+    <div class="row bg-prop-headers p-3 rounded border border-dark mt-1 text-prop-name">
         <a class="text-prop-name" style="text-decoration: none;" data-bs-toggle="collapse" href="#raised-collapse" role="button" aria-expanded="false" aria-controls="raised-collapse">
             <span class="font-lg">
                 Track a Proposition
