--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SimpleSinglePropositionPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/SimpleSinglePropositionPartial.cshtml
@@ -4,24 +4,25 @@
     var backgroundEachWayEv = Model.EachWayExpectedValue > 0 ? "bg-success" : "bg-prop-med";
     var borderSuccess = Model.EachWayExpectedValue > 0 ? "border-thick-lime" : "border border-dark";
 }
-<div class="row w-50 @backgroundEachWayEv @borderSuccess text-prop-name m-1 p-1 rounded">
+<div class="row simple-prop-row @backgroundEachWayEv @borderSuccess text-prop-name m-1 p-1 rounded">
     <div class="col-4 font-md">
         @Model.RunnerName
     </div>
-    <div class="col-5">
-        <span class="text-lime font-md">@Model.WinRunnerOddsNumerator/@Model.WinRunnerOddsDenominator</span>
-        &nbsp;
-        [<span class="text-pink"> @Model.ExchangeWinPrice.ToString("0.00") : </span>
-        <span class="text-pink">@Model.ExchangePlacePrice.ToString("0.00") </span>]
-        &nbsp;
+    <div class="col-1 p-0">
+        <span class="text-lime">@Model.WinRunnerOddsNumerator/@Model.WinRunnerOddsDenominator</span>
+    </div>
+    <div class="col-4 text-center">
+        <span class="text-pink"> @Model.ExchangeWinPrice.ToString("0.00") : </span>
+        <span class="text-pink">@Model.ExchangePlacePrice.ToString("0.00") </span>
+    </div>
+    <div class="col-1 p-0">
         <span class="text-lime">@Model.EachWayPlacePart.ToString("0.00")</span>
     </div>
-
     <div class="col-1">
         @{
             var textEachWayEv = Model.EachWayExpectedValue > 0 ? "text-light" : "text-prop-name";
         }
-        <span class="@textEachWayEv">@Model.EachWayExpectedValue.ToString("0.000%")</span>
+        <span class="@textEachWayEv">@Model.EachWayExpectedValue.ToString("0.00%")</span>
     </div>
 </div>
 
