--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/LivePropositionsPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/LivePropositionsPartial.cshtml
@@ -4,7 +4,7 @@
     <div class="col-12">
         @foreach (var meeting in Model.LivePropositions.GroupBy(e => e.EventName))
         {
-            <div class="row mb-3 bg-prop-base-1 text-light p-1 rounded">
+            <div class="row mb-3 bg-prop-base-1 text-light p-1 rounded font-md">
 
                 <div class="col-12 m-1">
                     <span class="font-lg text-warning">@meeting.Key</span>
@@ -15,7 +15,7 @@
                     {
                         <div class="me-1 mb-2 bg-prop-base-2 text-dark p-2 border border-dark rounded">
                             <div style="width: 200px;">
-                                <span class="font-md ms-1 me-1">@race.Key.ToString("HH:mm")</span>
+                                <span class="ms-1 me-1">@race.Key.ToString("HH:mm")</span>
                                 <span class="text-black me-1">@race.First().SportsbookNumberOfPlaces</span>
                                 <span class="text-black">1/@race.First().SportsbookPlaceFractionDenominator</span>
                              </div>
