--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/RacingSelectorPartial.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/RacingSelectorPartial.cshtml
@@ -4,7 +4,7 @@
     <div class="col-12">
         @foreach (var meeting in Model.Races.GroupBy(e => e.EventName))
         {
-            <div class="row mb-1">
+            <div class="row mb-3">
 
                 <div class="col-3">
                     <span class="me-13 font-md text-prop-name">@meeting.Key</span>
@@ -15,7 +15,7 @@
                     {
                         <span class="me-1">
                             <span class="d-none">@meeting.Key</span>
-                            <a class="btn btn-sm btn-warning select-race" style="width: 60px;">@race.EventDateTime.ToString("HH:mm")</a>
+                            <a class="btn btn-sm btn-warning select-race m-1" style="width: 60px;">@race.EventDateTime.ToString("HH:mm")</a>
                         </span>
                     }
                 </div>
