redirect to logout with invalid token
error and logout page updates

--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/MvcGrid/_GridFooter.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/MvcGrid/_GridFooter.cshtml
@@ -3,7 +3,7 @@
 @model IGrid<bad_each_way_finder_domain.DomainModel.Proposition>
 
 <tr>
-    <td colspan="10"><b>Total Sales</b></td>
+    <td colspan="10"><b>Total Value</b></td>
     <td><b>@(Model.Rows.Sum(row => row.Model.EachWayExpectedValue).ToString("0.00%"))</b></td>
     <td></td>
     <td></td>
