--- a/src/bad-each-way-finder/bad-each-way-finder/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Areas/Identity/Pages/Account/Logout.cshtml
@@ -5,12 +5,12 @@
 }
 
 <header>
-    <h1>@ViewData["Title"]</h1>
+    <h1 class="mt-3 border border-dark rounded">@ViewData["Title"]</h1>
     @{
         if (User.Identity?.IsAuthenticated ?? false)
         {
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
+            <form class="form-inline border rounded" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+                <button type="submit" class="nav-link btn btn-link text-light">Click here to Logout</button>
             </form>
         }
         else
