--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Error.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Error.cshtml
@@ -3,14 +3,14 @@
 @{
     ViewData["Title"] = "Error";
 }
-
+<div class="bg-prop-base-1 rounded p-3 mt-3">
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
 @if (!string.IsNullOrEmpty(Model.ExceptionMessage))
 {
     <p>
-        <strong>
+        <strong class="font-md text-light bg-prop-base-1">
             @Model.ExceptionMessage
         </strong>
     </p>
@@ -19,17 +19,8 @@
 @if (Model.ShowRequestId)
 {
     <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
+        <strong class="font-md text-light bg-prop-base-1">Request ID:</strong> <code class="font-md">@Model.RequestId</code>
     </p>
 }
+</div>
 
-@*<h3>Development Mode</h3>
-<p>
-    Swapping to the <strong>Development</strong> environment displays detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>*@
