Edits to remove commented code

--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/_Layout.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/_Layout.cshtml
@@ -2,6 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
+    <!--search engine optimistation(search engine bots)-->
+    <meta name="keywords" content="bad each way races, horse racing, betting, punter">
+    <meta name="description" content="Specialist bad each way race finder">
+    <!--search engine optimistation(social media bots)-->
+    <meta property="og:title" content="Bad Each Way Race Finder">
+    <meta property="og:image" content="~/images/black-and-white-ground-shot.jpg">
+    <meta proprty="og:type" content="website">
+    <meta property="og:description" content="Specialist bad each way race finder">
+    <!--favicon-->
+    <link rel="icon" type="image/x-icon" href="/images/favicon2.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - bad_each_way_finder</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
@@ -9,8 +19,7 @@
     <link rel="stylesheet" href="~/bad_each_way_finder.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/mvc-grid.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-@*    <link rel="stylesheet" href="~/css/sweet-alert-borderless.css" asp-append-version="true" />
-*@    <script src="https://kit.fontawesome.com/177a1325c3.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/177a1325c3.js" crossorigin="anonymous"></script>
 
 </head>
 <body class="site-bg">
