Updates to account layout

--- a/src/bad-each-way-finder/bad-each-way-finder/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Register confirmation";
 }
-<div class="text-light bg-dark-blue border border-dark rounded p-5 m-5">
+<div class="bg-light mt-3 p-2 border rounded">
 <h1>@ViewData["Title"]</h1>
 @{
     if (@Model.DisplayConfirmAccountLink)
