--- a/src/bad-each-way-finder/bad-each-way-finder/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Confirm email change";
 }
-
-<h1>@ViewData["Title"]</h1>
+<div class="bg-light mt-3 p-2 border rounded">
+    <h1>@ViewData["Title"]</h1>
+</div>
 <partial name="_StatusMessage" model="Model.StatusMessage" />
