--- a/src/bad-each-way-finder/bad-each-way-finder/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -8,18 +8,19 @@
         Layout = "/Areas/Identity/Pages/_Layout.cshtml";
     }
 }
+<div class="bg-light mt-3 p-4 border rounded">
+    <h1>Manage your account</h1>
 
-<h1>Manage your account</h1>
-
-<div>
-    <h2>Change your account settings</h2>
-    <hr />
-    <div class="row">
-        <div class="col-md-3">
-            <partial name="_ManageNav" />
-        </div>
-        <div class="col-md-9">
-            @RenderBody()
+    <div>
+        <h2>Change your account settings</h2>
+        <hr />
+        <div class="row">
+            <div class="col-md-3">
+                <partial name="_ManageNav" />
+            </div>
+            <div class="col-md-9">
+                @RenderBody()
+            </div>
         </div>
     </div>
 </div>
