updates on testing

--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/_Layout.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/_Layout.cshtml
@@ -116,7 +116,7 @@
                                 <li><a href="https://www.betfair.com/sport/horse-racing" target="_blank">BetFair Sportsbook</a></li>
                                 <li><a href="https://www.gamblingcommission.gov.uk/authorities/guide/page/safeguarding-and-gambling" target="_blank">Gambling Commission</a></li>
                                 <li><a href="https://www.gamstop.co.uk/" target="_blank">GamStop</a></li>
-                                <li><a href="#">FAQ</a></li>
+                                <li><a href="/Faq">FAQ</a></li>
                             </ul>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                                 <li><a href="/Races">Races</a></li>
                                 <li><a href="/Propositions">Propositions</a></li>
                                 <li><a href="/History">History</a></li>
-                                <li><a href="#"></a>FAQ</li>
+                                <li><a href="/Faq">FAQ</a></li>
                             </ul>
                         </div>
                     </div>
