--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Index.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Index.cshtml
@@ -22,7 +22,7 @@
         <div class="col-12 col-7-md welcome-text-color">
             <div style="font-size: 26px;">
                 <p><i class="fa-regular fa-square-check" style="color: forestgreen"></i> Discover Bad Each Way Bets in Real Time</p>
-                <p><i class="fa-regular fa-square-check" style="color: forestgreen"></i> Uses BetFair Exchange to Identify Positive EV Bets</p>
+                <p><i class="fa-regular fa-square-check" style="color: forestgreen"></i> Uses BetFair Exchange&trade; to Identify Positive EV Bets</p>
                 <p><i class="fa-regular fa-square-check" style="color: forestgreen"></i> Track Your Selections with Our Live Tracker</p>
                 <p><i class="fa-regular fa-square-check" style="color: forestgreen"></i> See full History of Your Selections</p>
             </div>
