--- a/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/MvcGrid/_GridFooter.cshtml
+++ b/src/bad-each-way-finder/bad-each-way-finder/Pages/Shared/MvcGrid/_GridFooter.cshtml
@@ -4,7 +4,7 @@
 
 <tr>
     <td colspan="10"><b>Total Value</b></td>
-    <td><b>@(Model.Rows.Sum(row => row.Model.EachWayExpectedValue).ToString("0.00%"))</b></td>
+    <td><b>@(Model.Rows.Sum(row => row.Model.LatestEachWayExpectedValue).ToString("0.00%"))</b></td>
     <td></td>
     <td></td>
 </tr>
